# renderer

./: Cargo.toml  README.md
.github/workflows/: checks.yml
colors/src/: color.rs  coloring.rs  gradient.rs  lib.rs  monotone.rs  prelude.rs
examples/: Cargo.toml
examples/src/: circle.rs  sphere.rs
geometry/src/: dimensions.rs  intersections.rs  lib.rs  normal.rs  prelude.rs  ray.rs  ray_intersections.rs  shape.rs  shape2d.rs  shape3d.rs  vectors.rs
image-proc/: Cargo.toml
image-proc/src/: image.rs  lib.rs  prelude.rs
image_lib/: Cargo.toml
image_lib/src/: color.rs  image.rs  lib.rs  ppm.rs  prelude.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  colored.rs  drawable.rs  lib.rs  lighting.rs  main.rs  object.rs  prelude.rs  scene.rs  surface.rs
renderer/tests/: draw_shape.rs  render_sphere.rs
src/: camera.rs  color.rs  dimensions.rs  image.rs  intersections.rs  lib.rs  main.rs  position.rs  ppm.rs  prelude.rs  scene.rs  shape.rs  shape2d.rs  shape3d.rs  vectors.rs
tests/: draw_shape.rs  render_sphere.rs
