[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { version = "0.1.0", path = "../geometry" }
image_lib = { version = "0.1.0", path = "../image_lib" }
colors = { version = "0.1.0", path = "../colors" }
renderer = { version = "0.1.0", path = "../renderer" }

[[example]]
name = "circle"
path = "src/circle.rs"
[[example]]
name = "sphere"
path = "src/sphere.rs"
[[example]]
name = "two_spheres"
path = "src/two_spheres.rs"
